Fixing recap style on mobile

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -11,7 +11,7 @@
   border: 2px solid $light-color;
   z-index: 10000;
   width: 600px;
-  max-width: 75%;
+  max-width: 95%;
 
   &.active {
     transform: translate(-50%, -50%) scale(1);
